--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	</head>
 	
 	<script>
+	var element = document.querySelector("#container");
+	element.requestFullscreen()	
+	</script>
+	
+	<script>
 	function pause(milliseconds){
 		   const date = Date.now();
 			  let currentDate = null;
