--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<h2> Welcome, user </h2>
 		<h3> Schmo inc. - I | DOnt | Know </h3>
 		
-		<script> pause(5000);
+		<script> pause(5000); </script>
 		
 		<h4> | Activating System...<span style="color: green">Success</span> </h4>
 		<script>
