--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		element.webkitRequestFullscreen();
 	else if(element.msRequestFullscreen)
 		element.msRequestFullscreen();
-}
+	}
 		
-		GoInFullScreen(
+	GoInFullScreen();
 		
 	function pause(milliseconds){
 		   const date = Date.now();
