--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		element.msRequestFullscreen();
 	}
 		
-	GoInFullScreen();
+	GoInFullScreen(element);
 		
 	function pause(milliseconds){
 		   const date = Date.now();
